Impl --enable-native-access